# lingua-pick

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
app/: .taurignore  Cargo.toml  build.rs  lingua-pick.duckdb.wal  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: builder.rs  context.rs  lib.rs  main.rs  setup.rs
app/src/handlers/: app.rs  audio.rs  error.rs  list.rs  mod.rs  models.rs  profile.rs  session.rs
app/src/services/: asset.rs  audio.rs  clock.rs  dep_resolver.rs  emitter.rs  id.rs  jwt.rs  listener.rs  mod.rs  password.rs  profile.rs  resource.rs  transcribe.rs  wotd.rs
app/src/updater/: fake.rs  manager.rs  mod.rs  models.rs  plugin.rs  traits.rs  utils.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/store/: Cargo.toml  build.rs
crates/store/src/: database.rs  lib.rs  main.rs  models.rs  queries.rs
crates/store/src/migrations/: 001_init.sql  002_data.sql  002_data_languages.sql  003_data_assets.sql  003_data_script.sql  004_data_lexeme.sql  004_data_script.sql  005_data_exercise_type.sql  006_data_exercise_type.sql  006_data_language_features.sql  007_data_language_features_map.sql  998_data_lexeme.sql  999_data_sample.sql  mod.rs
crates/store/src/queries/: exercise.rs  grapheme.rs  language.rs  lexeme.rs  misc.rs  mod.rs  session.rs
crates/store/src/repository/: assets.rs  character.rs  exercise.rs  grapheme.rs  language.rs  lexeme.rs  metric.rs  mod.rs  profile.rs  session.rs  stat.rs  user.rs  wotd.rs
crates/store/src/tests/: context.rs  mod.rs  utils.rs
src/: App.tsx  index.css  kroman.d.ts  utils.ts
src/api/: api.ts  appData.ts  data.ts  exercise.ts  index.ts  kr.ts  misc.ts  sentence.ts  session.ts  speechApi.ts  stats.ts  utils.ts  words.ts
src/api/exercise/: generate.ts  index.ts  utils.ts  validate.ts
src/components/: BottomPanel.tsx  Breadcrumbs.tsx  ImageOption.tsx  Landing.tsx  LanguageSelector.tsx  NewQuiz.tsx  Session.tsx  Typer.tsx  WordImageSelector.tsx
src/components/Docs/: Breadcrumbs.tsx  Main.tsx  MarkdownComponents.tsx  TableOfContents.tsx
src/components/Docs/markdowns/: Architecture.md  Introduction.md
src/components/Learning/: Breadcrumbs.tsx  Main.tsx  TableOfContents.tsx  utils.ts
src/components/Learning/content/: GrammarContent.tsx  VocabularyContent.tsx
src/components/Review/: Breadcrumbs.tsx  Main.tsx
src/components/Session/: BottomPanel.tsx  Completed.tsx  ExerciseRenderer.tsx  ImageOption.tsx  Main.tsx  NotFound.tsx  ProgressBar.tsx  SentenceTyping.tsx  WordImageSelector.tsx  WordWordSelector.tsx  utils.ts
src/components/Session/HangulMatch/: Matcher.tsx
src/components/Session/WordWord/: Item.tsx  (+1 more)
src/components/SpeechRecognition/: Background.tsx  Breadcrumbs.tsx  History.tsx  HistoryItemComponent.tsx  Prompt.tsx  SpeechRecognizer.tsx  speechStates.ts
src/components/Typing/: Breadcrumbs.tsx  Typer.tsx  romanToHangulMap.ts
src/context/: LanguageContext.tsx
src/data/: sentences.json  vocabulary.json
src/data/kr/: romanized_to_hangul.json  sentences.json  vocabulary.json
src/hooks/: useSpeechSynthesis.ts
src/models/: core.ts  exercise.ts  index.ts  misc.ts  stats.ts
src/utils/: loadMarkdownFiles.ts
web/: package-lock.json  package.json  svelte.config.js
web/src/: app.css  app.d.ts  app.html
web/src/lib/: constants.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/static/: starter.avif
(+19 files in other folders)
